Them chuc nang fullscreen

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,7 @@
 body {
 	margin: 0 auto;
 	color: #fff;
+	font-family: 'Dancing Script', cursive;
 }
 
 a {
@@ -84,6 +85,7 @@ a {
 	background-color: #fff;
 	border: none;
 	text-transform: uppercase;
+	font-family: inherit;
 }
 .modal-footer button.submit-modal {
 	background-color: #1340a7;
