--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,14 +1,15 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 body {
-	margin: 0 auto;
 	color: #fff;
 	font-family: 'Dancing Script', cursive;
 }
 .container {
-	width: 100%;
+	max-width: 1140px;
+	margin: auto;
 }
 a {
 	color: inherit;
